header title + fix horizontal scrolll on mobile

--- a/src/sass/common/_global.scss
+++ b/src/sass/common/_global.scss
@@ -10,3 +10,7 @@ body[style*="hidden"] {
     visibility: hidden;
   }
 }
+
+section{
+  overflow: hidden;
+}
